# transcriber

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .flake8  .pre-commit-config.yaml  LINTING_SETUP_COMPLETE.md  Makefile  README.md  README_LINTING.md  pyproject.toml  requirements.txt  verify_linting.sh
backend/.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/dependencies/: __init__.py  providers.py
backend/app/api/schemas/: __init__.py  summarize.py  transcript.py
backend/app/api/sse/: __init__.py  encoder.py  streaming.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: health.py  summarize.py  transcript.py
backend/app/application/dto/: __init__.py  summary_events.py
backend/app/application/use_cases/: __init__.py  get_transcript.py  prompts.py  summarize_video.py
backend/app/core/: logging.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  summary.py  transcript.py  video.py
backend/app/domain/exceptions/: __init__.py  errors.py
backend/app/domain/interfaces/: __init__.py  llm_provider.py  transcript_provider.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/config/: __init__.py  settings.py
backend/app/infrastructure/llm/: __init__.py  anthropic_adapter.py
backend/app/infrastructure/youtube/: __init__.py  transcript_api_adapter.py
backend/docs/: CONFIGURATION.md  LINTING.md  SETTINGS_FLOW.md
backend/tests/: conftest.py
backend/tests/unit/: test_get_transcript.py  test_prompts.py  test_sse_encoder.py  test_summarize_use_case.py  test_video_id.py
frontend/: .env.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: SummarizeForm.tsx  SummaryView.tsx
frontend/src/components/Chat/: ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx
frontend/src/hooks/: useChatSession.ts  useSummaryStream.ts
frontend/src/services/: transcriberApi.ts
frontend/src/types/: api.ts  chat.ts
